test_apps/test-typechecker/fail/entitysimplepropkind.app
application test

section datamodel

  entity User {
    authoredPapers :: Set<Paper>
  }

  entity Paper {
  }